# pyxidust

./: LICENSE  README.md  arc.py  config.py  lidar.py  projects.py  pyproject.toml  setup.cfg  utils.py
meta/: Aspect.txt  Buildings3D.txt  Contours10ft.txt  DEM.txt  DSM.txt  HillshadeDEM.txt  Intensity.txt  Mean.txt  Range.txt  Slope.txt  Subset.txt  TerrainDEM.txt  TerrainDSM.txt
pyxidust/: __init__.py  config.py  gp.py  lidar.py  projects.py
pyxidust/docs/: gp-module.md
pyxidust/metadata/: Density.txt  Height.txt  HillshadeDSM.txt
pyxidust/scripts/: las.py
scripts/: lidartools.py
test/: package.py
