[metadata]
name = pyxidust
version = 0.2.0
author = Gabriel Peck 
author_email = pyxidust@pm.me
description = ArcGIS PRO library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pyxidust
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.11
include_package_data = True
